[gd_scene load_steps=5 format=2]

[ext_resource path="res://visuals/turret_BASE.png" type="Texture" id=1]
[ext_resource path="res://visuals/turret_FACE.png" type="Texture" id=2]
[ext_resource path="res://Turret.gd" type="Script" id=3]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=4]

[node name="Turret" type="Node2D"]
script = ExtResource( 3 )
BULLET = ExtResource( 4 )

[node name="BaseSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="GunSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 10

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 250, 0 )

[node name="ReloadTimer" type="Timer" parent="RayCast2D"]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="RayCast2D/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
